tests/integrations/basic-fail/tests/actual_tests_bless/foomp_aux.stderr
error[E0308]: mismatched types
 --> $DIR/foomp_aux.rs:6:9
  |
6 |     add("42", 3);
  |     --- ^^^^ expected `u8`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> $DIR/tests/integrations/basic-fail/$DIR/auxiliary/foomp.rs:1:8
  |
1 | pub fn add(_: u8, _: u8) {}
  |        ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
